fix: typing of model
