# docs/swagger.yaml
@@ -13,6 +13,58 @@ definitions:
       healthy:
         type: boolean
     type: object
+  dao_post.Post:
+    properties:
+      content:
+        type: string
+      created_at:
+        $ref: '#/definitions/types.DateTime'
+      deleted_at:
+        $ref: '#/definitions/types.DateTime'
+      id:
+        type: string
+      updated_at:
+        $ref: '#/definitions/types.DateTime'
+      user_id:
+        type: string
+    type: object
+  post.CreatePostCommand:
+    properties:
+      content:
+        type: string
+    type: object
+  post.CreatePostResponse:
+    properties:
+      content:
+        type: string
+      created_at:
+        $ref: '#/definitions/types.DateTime'
+      deleted_at:
+        $ref: '#/definitions/types.DateTime'
+      id:
+        type: string
+      updated_at:
+        $ref: '#/definitions/types.DateTime'
+      user_id:
+        type: string
+    type: object
+  types.DateTime:
+    type: object
+  types.Pagination-dao_post_Post:
+    properties:
+      hasMore:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/dao_post.Post'
+        type: array
+      limit:
+        type: integer
+      offset:
+        type: integer
+      total:
+        type: integer
+    type: object
   user.LoginCommand:
     properties:
       email:
@@ -71,6 +123,51 @@ paths:
       summary: Check if application is ready to serve traffic
       tags:
       - health
+  /post:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.Pagination-dao_post_Post'
+      security:
+      - Authorization: []
+      summary: List posts given user
+      tags:
+      - post
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Create post payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/post.CreatePostCommand'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/post.CreatePostResponse'
+      security:
+      - Authorization: []
+      summary: Create new post
+      tags:
+      - post
   /user/login:
     post:
       consumes:
